--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
     <title>Food Network</title>
 </head>
 <body>
-    <section class="display">
-        <div class="half-width" id="div1-border">
-            <h1><span class="orange-color">Skip</span> The Diet,</h1>
-            <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
-            <p>Skip the diet, just eat healthy Food is a source of health, energy and enjoyment.Just eat Healthy! Live Healthy.</p>
-            <a href="https://www.hungrynaki.com/">Order Now</a>
+    <section>
+        <div  class="display">
+
+            <div class="half-width" id="div1-border">
+                <h1><span class="orange-color">Skip</span> The Diet,</h1>
+                <h1>Just Eat Healthy</h1>
+                <h1>With Food Network</h1>
+                <p>Skip the diet, just eat healthy Food is a source of health, energy and enjoyment.Just eat Healthy! Live Healthy.</p>
+                <a href="https://www.hungrynaki.com/">Order Now</a>
+            </div>
+            <div class="half-width">
+                <img id="sec1-img" src="images/female/Group 8425.png" alt="">
+            </div>
+
         </div>
-        <div class="half-width">
-            <img id="sec1-img" src="images/female/Group 8425.png" alt="">
+    </section>
+
+    <section >
+        <div class="display" id="sec2-bg">
+            <div>
+                <img id="aboutme-img" src="images/female/Person Image.png" alt="">
+            </div>
         </div>
     </section>
 </body>
