--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1><span class="orange-color">Skip</span> The Diet,</h1>
                 <h1>Just Eat Healthy</h1>
                 <h1>With Food Network</h1>
-                <p>Skip the diet, just eat healthy Food is a source of health, energy and enjoyment.Just eat Healthy! Live Healthy.</p>
+                <p id="sec1-para">Skip the diet, just eat healthy Food is a source of health, energy and enjoyment.Just eat Healthy! Live Healthy.</p>
                 <a href="https://www.hungrynaki.com/">Order Now</a>
             </div>
             <div class="half-width">
@@ -30,8 +30,12 @@
 
     <section >
         <div class="display" id="sec2-bg">
-            <div>
+            <div class="half-width">
                 <img id="aboutme-img" src="images/female/Person Image.png" alt="">
+            </div>
+            <div class="half-width" style="padding-top: 5%;">
+                <h2>About Me</h2>
+                <p id="aboutme-para">First food delivery app (company) in Bangladesh HungryNaki is now well accessible across the major parts of the country. The popular restaurants with favourite dishes for which you are craving all are available in HungryNaki right now.</p>
             </div>
         </div>
     </section>
