--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
             <div class="half-width">
                 <img id="aboutme-img" src="images/female/Person Image.png" alt="">
             </div>
-            <div class="half-width" style="padding-top: 5%;">
+            <div class="half-width" style="padding-top: 5%; padding-left: 100px;">
                 <h2>About Me</h2>
                 <p id="aboutme-para">First food delivery app (company) in Bangladesh HungryNaki is now well accessible across the major parts of the country. The popular restaurants with favourite dishes for which you are craving all are available in HungryNaki right now.</p>
+                <a href="https://www.hungrynaki.com/">Contact Me</a>
             </div>
+        </div>
+        <div id="MyRecipies" >
+            <h2 style="color: rgb(119, 119, 119);">My Recipies</h2>
+            <p id="MyRecipies-para">This site was built to help food bloggers show their recipes to more recipe lovers. Also anyone can create their own my recipe file called a collection. Recipe lovers can follow food bloggers or collections.</p>
         </div>
     </section>
 </body>
