--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
     </section>
 
-    <section >
-        <div class="display" id="sec2-bg">
+    <section id="sec2-bg" >
+        <div class="display" >
             <div class="half-width">
                 <img id="aboutme-img" src="images/female/Person Image.png" alt="">
             </div>
@@ -43,6 +43,29 @@
             <h2 style="color: rgb(119, 119, 119);">My Recipies</h2>
             <p id="MyRecipies-para">This site was built to help food bloggers show their recipes to more recipe lovers. Also anyone can create their own my recipe file called a collection. Recipe lovers can follow food bloggers or collections.</p>
         </div>
+    </section>
+
+    <section>
+
+    <div class="display">
+
+        <div>
+            <img class="FoodImage" src="images/food/Project Cover.jpg" alt="">
+
+        </div>
+
+        <div>
+
+        </div>
+
+        <div>
+
+        </div>
+
+    </div>
+
+
+
     </section>
 </body>
 </html>
