--- a/index.html
+++ b/index.html
@@ -45,21 +45,27 @@
         </div>
     </section>
 
-    <section>
+    <section> 
 
     <div class="display">
 
-        <div>
+        <div class="RecipiesBox">
             <img class="FoodImage" src="images/food/Project Cover.jpg" alt="">
+            <h2 class="RecipiesHeading">Beef Stew</h2>
+            <p>Food Network Kitchen's Beef Stew is a comforting slow-cooked dish filled with meat and veggies. </p>
 
         </div>
-
-        <div>
-
+            
+        <div class="RecipiesBox">
+            <img class="FoodImage" src="images/food/Project Cover1.jpg" alt="">
+            <h2 class="RecipiesHeading">Beefsteak</h2>
+            <p>Beefsteak is comprised of thin slices of beef and a generous amount of onions. </p>
         </div>
 
-        <div>
-
+        <div class="RecipiesBox"> 
+            <img class="FoodImage" src="images/food/Project S Cover.png" alt="">
+            <h2 class="RecipiesHeading">Thai Soup</h2>
+            <p> Thai Soup to Celebrate the Year of the Hare On dine chez Nanou fish sauce, fresh ginger, cooked chicken, lime juice, rice noodles  </p>
         </div>
 
     </div>
