--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
     
         </div>
     </div>
+</section>
 
-
-
-    </section>
+<footer>
+    <h3 style="font-size: 120%;"><span class="orange-color">FOOD</span> NETWORK </h3>
+    <p style="color: white;">Eat healthy to live healthy. Live healthy to live happy.</p>
+</footer>
 </body>
 </html>
