--- a/index.html
+++ b/index.html
@@ -69,6 +69,30 @@
         </div>
     </div>
 
+    <div class="display" style="border-bottom: 100px solid white;">
+
+        <div class="RecipiesBox">
+            <img class="FoodImage" style="border-radius: 25px;" src="images/food/Project Cover5.png" alt="">
+            <h2 class="RecipiesHeading">Fruites Salad</h2>
+            <p>Fresh fruit is colorful and nutritious. Thrown into a fruit salad, it becomes the perfect take-along dish for parties, picnics and potlucks.</p>
+
+        </div>
+            
+        <div class="RecipiesBox">
+            <img class="FoodImage" 
+            style="border-radius: 25px;"src="images/food/Project Cover8.png " alt="">
+            <h2 class="RecipiesHeading">Peas Salad </h2>
+            <p>Sweet pea salad recipe using canned sweet peas. The basis was this was the 'Balsamic Pea Salad' recipe.</p>
+        </div>
+
+        <div class="RecipiesBox"> 
+            <img class="FoodImage" src="images/food/Project S Cover.png" alt="">
+            <h2 class="RecipiesHeading">Chicken Soup</h2>
+            <p> Thin strips of chicken breast are simmered in broth with jalapenos and lime and then combined with avocado in this spicy soup.</p>
+        </div>
+    </div>
+
+
     <div class="display" id="subcriptionInfoBorder">
         <div class="subcriptionInfo">
             <h1 class="RecipiesHeading">700K</h1>
