--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Just Eat Healthy</h1>
                 <h1>With Food Network</h1>
                 <p id="sec1-para">Skip the diet, just eat healthy Food is a source of health, energy and enjoyment.Just eat Healthy! Live Healthy.</p>
-                <a href="https://www.hungrynaki.com/">Order Now</a>
+                <a target="blank" href="https://www.hungrynaki.com/">Order Now</a>
             </div>
             <div class="half-width">
                 <img id="sec1-img" src="images/female/Group 8425.png" alt="">
@@ -36,7 +36,7 @@
             <div class="half-width" style="padding-top: 5%; padding-left: 100px;">
                 <h2>About Me</h2>
                 <p id="aboutme-para">First food delivery app (company) in Bangladesh HungryNaki is now well accessible across the major parts of the country. The popular restaurants with favourite dishes for which you are craving all are available in HungryNaki right now.</p>
-                <a href="https://www.hungrynaki.com/">Contact Me</a>
+                <a target="blank" href="https://www.hungrynaki.com/">Contact Me</a>
             </div>
         </div>
         <div id="MyRecipies" >
